fixed add ingredient select field not showing selected error

--- a/react-app/src/components/auth/LoginForm.css
+++ b/react-app/src/components/auth/LoginForm.css
@@ -29,8 +29,7 @@ input[type=password],
 input[type=number],
 input[type=email],
 input[type=file],
-input[type=datetime-local],
-select {
+input[type=datetime-local] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
